--- a/my-react-app/src/index.css
+++ b/my-react-app/src/index.css
@@ -1,10 +1,15 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
+  color: var(--text);
+  background: var(--bg);
+  /* If you have a 2x image, you can use image-set:
+     background-image: image-set(url('../images/bg.png') 1x, url('../images/bg@2x.png') 2x); */
+  background-image: url('./images/bg.png');
+  background-size: cover;       /* fills any monitor size */
+  background-position: center;  /* stays centered on ultra-wide */
+  background-repeat: no-repeat;
+  background-attachment: scroll; /* change to 'fixed' if you want parallax feel */
 }
 
 code {
