working Login Register pages

--- a/Client/my-react-app/src/components/PasswordInput.css
+++ b/Client/my-react-app/src/components/PasswordInput.css
@@ -1,9 +1,10 @@
 /* ===== Password Input ===== */
-.password-input {
+.password-input::before {
   position: relative;
   width: 100%;
-
+  padding-bottom: 20px; 
 }
+
 
 .password-input input {
   width: 100%;
