--- a/Client/my-react-app/src/components/Button.css
+++ b/Client/my-react-app/src/components/Button.css
@@ -27,6 +27,7 @@
 .btn-primary {
   background: var(--brand);
   color: #fff;
+  margin-top: 20px;
 }
 .btn-primary:hover { background: var(--brand-700); }
 
