--- a/Client/my-react-app/src/components/PasswordInput.css
+++ b/Client/my-react-app/src/components/PasswordInput.css
@@ -24,9 +24,10 @@
 }
 
 .password-toggle {
-  position: absolute;
+  position: relative;
   top: 50%;
-  right: 12px;
+  left: 95%;
+  bottom: 25px;
   transform: translateY(-50%);
   border: none;
   background: transparent;
